second push, still working

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,125 +25,86 @@
       </div>
     </nav>
     <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+          <div class="container-fluid imgStyle img-thumbnail">
+            <div class="row-fluid">
+              <div class=" portStyle col-lg-12">
+                <h1>Portfolio</h1>
+              </div>
+              <div id="mycarousel" class="banner carousel slide col-lg-6" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="item active">
+                    <img src="./Assets/images/logo_design.png" alt="" class="img-responsive">
+                    <div class="carousel-caption">
+                     <h3>Logo Design</h3>
+                   </div>
+                 </div>
+               </div>
+             </div>
+             <div id="mycarousel" class="banner carousel slide col-lg-6" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="item active">
+                  <img src="./Assets/images/film.png" alt="" class="img-responsive">
+                  <div class="carousel-caption">
+                   <h3>Media Design</h3>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div id="mycarousel" class="banner carousel slide col-lg-6" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="item active">
+                <img src="./Assets/images/audio.png" alt="" class="img-responsive">
+                <div class="carousel-caption">
+                 <h3>Audio Post</h3>
+               </div>
+             </div>
+           </div>
+         </div>
+         <div id="mycarousel" class="banner carousel slide col-lg-6" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="item active">
+              <img src="./Assets/images/writing.png" alt="" class="img-responsive">
+              <div class="carousel-caption">
+               <h3>Writing</h3>
+             </div>
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+  <div class="container-fluid img-thumbnail rightStyle">
     <div class="row-fluid">
-    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-    <div class="container-fluid imgStyle img-thumbnail">
-      <div class="row-fluid">
-        <div class=" portStyle col-lg-12">
-        <h1>Portfolio</h1>
-        </div>
-        <div id="mycarousel" class="banner carousel slide col-lg-6" data-ride="carousel">
-    <div class="carousel-inner">
-        <div class="item active">
-        <img src="./Assets/images/logo_design.png" alt="" class="img-responsive">
-           <div class="carousel-caption">
-           <h3>Logo Design</h3>
-           </div>
-        </div>
-    </div>
-</div>
-<div id="mycarousel" class="banner carousel slide col-lg-6" data-ride="carousel">
-    <div class="carousel-inner">
-        <div class="item active">
-        <img src="./Assets/images/film.png" alt="" class="img-responsive">
-           <div class="carousel-caption">
-           <h3>Media Design</h3>
-           </div>
-        </div>
-    </div>
-</div>
-<div id="mycarousel" class="banner carousel slide col-lg-6" data-ride="carousel">
-    <div class="carousel-inner">
-        <div class="item active">
-        <img src="./Assets/images/audio.png" alt="" class="img-responsive">
-           <div class="carousel-caption">
-           <h3>Audio Post</h3>
-           </div>
-        </div>
-    </div>
-</div>
-<div id="mycarousel" class="banner carousel slide col-lg-6" data-ride="carousel">
-    <div class="carousel-inner">
-        <div class="item active">
-        <img src="./Assets/images/writing.png" alt="" class="img-responsive">
-           <div class="carousel-caption">
-           <h3>Writing</h3>
-           </div>
-        </div>
-    </div>
-</div>
-        <!-- <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-          <img src="./Assets/images/logo_design.png" class="img-responsive" alt="">
-        </div>
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-          <img src="./Assets/images/logo_design.png" class="img-responsive" alt="">
-        </div>
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-          <img src="./Assets/images/audio.png" class="img-responsive" alt="">
-        </div>
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-          <img src="./Assets/images/writing.png" class="img-responsive" alt="">
-        </div>  -->
+    <div class=" portStyle col-lg-12" id="port">
+        <h3>Connect with Me</h3>
       </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 m-x-lg-4">
+        <a target="_blank" href="https://github.com/ccruml20"><img src="./Assets/images/gitlogo.png"></a>
       </div>
-     </div>
-         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-      <div class="container-fluid rightStyle img-thumbnail">
-      <div class="row-fluid">
-        <div class=" portStyle col-lg-12">
-        <h1>Portfolio</h1>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-          <img src="./Assets/images/logo_design.png" class="img-responsive" alt="">
-        </div>
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-          <img src="./Assets/images/logo_design.png" class="img-responsive" alt="">
-        </div>
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-          <img src="./Assets/images/logo_design.png" class="img-responsive" alt="">
-        </div>
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-          <img src="./Assets/images/logo_design.png" class="img-responsive" alt="">
-        </div>
-        </div>
-        </div>
-        </div>
-
-
+      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+        <a target="_blank" href="https://stackoverflow.com/users/7823629/chase-crumley"><img src="./Assets/images/stackoverflow.png"></a>
       </div>
-     </div>
-
-      <!--Sidebar content-->
-
-      <!--Body content-->
-<!--     <div class="row banner2">
-      <div class="col-lg-12 col-md-12 col-sm-12">
-        <div>
-            <h3>Logo Design</h3>
-        </div>
-         <div>
-            <h3>Logo Design</h3>
-        </div>
-         <div>
-            <h3>Logo Design</h3>
-        </div>
-         <div>
-            <h3>Logo Design</h3>
-        </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+        <a target="_blank" href="https://www.linkedin.com/in/chase-crumley-951387a3/"><img src="./Assets/images/linkedin.png"></a>
       </div>
-    </div> -->
-      <div class="footerStyle row">
-   <div class="col-md-8 col-sm-12" style="text-align: left">
-    <h4>Graphic Design / Film Production / Audio Post / Web Development</h4>
+    </div>
   </div>
-  <div class="col-lg-4 col-sm-12" id="linkStyle" class="d-inline">
-    <img src="assets/images/githublogo.png" class="img-responsive" alt="">
-    <img src="assets/images/githublogo.png" class="img-responsive" alt="">
-      <div  class="col-4" id="linkStyle" class="d-inline">
-    <img src="assets/images/githublogo.png" class="img-responsive" alt="">
-  </div>
-    </div>
 </div>
 </div>
-      </body>
-      </html>
+</div>
+<div class="footerStyle row">
+ <div class="col-md-8 col-lg-8 col-sm-12 col-xs-12" style="text-align: left">
+  <h4>Graphic Design / Film Production / Audio Post / Web Development</h4>
+</div>
+<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="linkStyle" class="d-inline">
+ <footer>
+  <p> &copy; Copyright 2017 Chase Crumley</p>
+</footer>
+</div>
+</div>
+</div>
+</body>
+</html>
