--- a/about.html
+++ b/about.html
@@ -26,33 +26,22 @@
     </nav>
     <div class="container-fluid">
     <div class="row">
-    <div class="col-lg-8">
-    <div id="imgStyle" class="container-fluid imgStyle img-thumbnail">
+    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+    <div id="imgStyle" class="container-fluid imgStyle2 img-thumbnail">
       <div class="row">
         <div class=" portStyle col-lg-12">
-          <h1>Portfolio</h1>
+          <h1>About Me</h1>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-6">
-          <img src="./Assets/images/logo_design.png" class="img-responsive" alt="">
-        </div>
-        <div class="col-lg-5 col-md-6 col-sm-6">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            <div class="imgStyle2 col-lg-4 col-md-4 col-sm-12 col-xs-12">
 
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non fugiat nulla pariatur. Excepteur sint occaecat cupidatat non occaecat cupidatat non 
-          </p>
-
-        </div>
-        <div class="col-lg-12 col-md-12 col-sm-12">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed idatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-        </div>
+                    <img src="./Assets/images/Chase.jpg" class="img-responsive" alt="">
+                    </div>
+                   <!--  <div class="imgStyle2 col-lg-8 col-md-8 col-sm-12 col-xs-12"> -->
+                   <div>
+                    <p>I desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like). I desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as </p>
+                    </div>
+               <!--  </div> -->
       </div>
       </div>
       </div>
@@ -60,27 +49,24 @@
     </div> -->
 <!--     <div class="container-fluid">
     <div class="row"> -->
-    <div class="col-lg-4">
-    <div class="container-fluid leftStyle img-thumbnail">
-      <div class="row">
-        <div class=" portStyle col-lg-12">
-          <h1>Portfolio</h1>
-        </div>
-        <div class="col-lg-6 col-md-4 col-sm-6">
-          <img src="./Assets/images/logo_design.png" class="img-responsive" alt="">
-        </div>
-        <div class="col-lg-6 col-md-4 col-sm-6">
-          <img src="./Assets/images/logo_design.png" class="img-responsive" alt="">
-        </div>
-        <div class="col-lg-6 col-md-4 col-sm-6">
-          <img src="./Assets/images/logo_design.png" class="img-responsive" alt="">
-        </div>
-        <div class="col-lg-6 col-md-4 col-sm-6">
-          <img src="./Assets/images/logo_design.png" class="img-responsive" alt="">
-        </div> 
+ <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+  <div class="container-fluid img-thumbnail rightStyle">
+    <div class="row-fluid">
+    <div class=" portStyle col-lg-12" id="port">
+        <h3>Connect with Me</h3>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 m-x-lg-4">
+        <a target="_blank" href="https://github.com/ccruml20"><img src="./Assets/images/gitlogo.png"></a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+        <a target="_blank" href="https://stackoverflow.com/users/7823629/chase-crumley"><img src="./Assets/images/stackoverflow.png"></a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+        <a target="_blank" href="https://www.linkedin.com/in/chase-crumley-951387a3/"><img src="./Assets/images/linkedin.png"></a>
       </div>
     </div>
-    </div>
+  </div>
+</div>
     </div>
 <!--     <div class="row banner2">
       <div class="col-lg-12 col-md-12 col-sm-12">
