--- a/contact.html
+++ b/contact.html
@@ -27,64 +27,64 @@
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-<div class="container imgStyle1">
-<div class="col-md-5">
-    <div class="form-area">  
-        <form role="form">
-        <br style="clear:both">
-                    <h3 style="margin-bottom: 25px; text-align: center;">Contact Form</h3>
-            <div class="form-group">
-            <input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" id="email" name="email" placeholder="Email" required>
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" id="mobile" name="mobile" placeholder="Mobile Number" required>
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
-          </div>
-                    <div class="form-group">
+          <div class="container imgStyle1">
+            <div class="col-md-5">
+              <div class="form-area">  
+                <form role="form">
+                  <br style="clear:both">
+                  <h3 style="margin-bottom: 25px; text-align: center;">Contact Form</h3>
+                  <div class="form-group">
+                    <input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" id="email" name="email" placeholder="Email" required>
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" id="mobile" name="mobile" placeholder="Mobile Number" required>
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
+                  </div>
+                  <div class="form-group">
                     <textarea class="form-control" type="textarea" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
-                        <span class="help-block"><p id="characterLeft" class="help-block ">You have reached the limit</p></span>                    
-                    </div>
-            
-        <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Submit Form</button>
-        </form>
+                    <span class="help-block"><p id="characterLeft" class="help-block ">You have reached the limit</p></span>                    
+                  </div>
+                  
+                  <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Submit Form</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+          <div class="container-fluid img-thumbnail rightStyle">
+            <div class="row-fluid">
+              <div class=" portStyle col-lg-12" id="port">
+                <h3>Connect with Me</h3>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 m-x-lg-4">
+                <a target="_blank" href="https://github.com/ccruml20"><img src="./assets/images/gitlogo.png"></a>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                <a target="_blank" href="https://stackoverflow.com/users/7823629/chase-crumley"><img src="./assets/images/stackoverflow.png"></a>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                <a target="_blank" href="https://www.linkedin.com/in/chase-crumley-951387a3/"><img src="./assets/images/linkedin.png"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
-</div>
- </div>
- <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-  <div class="container-fluid img-thumbnail rightStyle">
-    <div class="row-fluid">
-    <div class=" portStyle col-lg-12" id="port">
-        <h3>Connect with Me</h3>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 m-x-lg-4">
-        <a target="_blank" href="https://github.com/ccruml20"><img src="./Assets/images/gitlogo.png"></a>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-        <a target="_blank" href="https://stackoverflow.com/users/7823629/chase-crumley"><img src="./Assets/images/stackoverflow.png"></a>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-        <a target="_blank" href="https://www.linkedin.com/in/chase-crumley-951387a3/"><img src="./Assets/images/linkedin.png"></a>
-      </div>
+    <div class="footerStyle row">
+     <div class="col-md-8 col-lg-8 col-sm-12 col-xs-12" style="text-align: left">
+      <h4>Graphic Design / Film Production / Audio Post / Web Development</h4>
     </div>
+    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="linkStyle" class="d-inline">
+     <footer>
+      <p> &copy; Copyright 2017 Chase Crumley</p>
+    </footer>
   </div>
-</div>
-</div>
-</div>
-<div class="footerStyle row">
- <div class="col-md-8 col-lg-8 col-sm-12 col-xs-12" style="text-align: left">
-  <h4>Graphic Design / Film Production / Audio Post / Web Development</h4>
-</div>
-<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="linkStyle" class="d-inline">
- <footer>
-  <p> &copy; Copyright 2017 Chase Crumley</p>
-</footer>
-</div>
 </div>
 </div>
 </body>
