--- a/about.html
+++ b/about.html
@@ -25,77 +25,55 @@
       </div>
     </nav>
     <div class="container-fluid">
-    <div class="row">
-    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-    <div id="imgStyle" class="container-fluid imgStyle2 img-thumbnail">
       <div class="row">
-        <div class=" portStyle col-lg-12">
-          <h1>About Me</h1>
-        </div>
-            <div class="imgStyle2 col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+          <div id="imgStyle" class="container-fluid imgStyle2 img-thumbnail">
+            <div class="row">
+              <div class=" portStyle col-lg-12">
+                <h1>About Me</h1>
+              </div>
+              <div class="imgStyle2 col-lg-4 col-md-4 col-sm-12 col-xs-12">
 
-                    <img src="./Assets/images/Chase.jpg" class="img-responsive" alt="">
-                    </div>
-                   <!--  <div class="imgStyle2 col-lg-8 col-md-8 col-sm-12 col-xs-12"> -->
-                   <div>
-                    <p>I desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like). I desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as </p>
-                    </div>
-               <!--  </div> -->
-      </div>
-      </div>
-      </div>
-  <!--   </div>
-    </div> -->
-<!--     <div class="container-fluid">
-    <div class="row"> -->
- <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-  <div class="container-fluid img-thumbnail rightStyle">
-    <div class="row-fluid">
-    <div class=" portStyle col-lg-12" id="port">
-        <h3>Connect with Me</h3>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 m-x-lg-4">
-        <a target="_blank" href="https://github.com/ccruml20"><img src="./Assets/images/gitlogo.png"></a>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-        <a target="_blank" href="https://stackoverflow.com/users/7823629/chase-crumley"><img src="./Assets/images/stackoverflow.png"></a>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-        <a target="_blank" href="https://www.linkedin.com/in/chase-crumley-951387a3/"><img src="./Assets/images/linkedin.png"></a>
-      </div>
-    </div>
-  </div>
-</div>
-    </div>
-<!--     <div class="row banner2">
-      <div class="col-lg-12 col-md-12 col-sm-12">
-        <div>
-            <h3>Logo Design</h3>
+                <img src="./assets/images/Chase.jpg" class="img-responsive" alt="">
+              </div>
+              <div>
+                <p>I desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like). I desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as </p>
+              </div>
+            </div>
+          </div>
         </div>
-         <div>
-            <h3>Logo Design</h3>
-        </div>
-         <div>
-            <h3>Logo Design</h3>
-        </div>
-         <div>
-            <h3>Logo Design</h3>
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+          <div class="container-fluid img-thumbnail rightStyle">
+            <div class="row-fluid">
+              <div class=" portStyle col-lg-12" id="port">
+                <h3>Connect with Me</h3>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 m-x-lg-4">
+                <a target="_blank" href="https://github.com/ccruml20"><img src="./assets/images/gitlogo.png"></a>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                <a target="_blank" href="https://stackoverflow.com/users/7823629/chase-crumley"><img src="./assets/images/stackoverflow.png"></a>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                <a target="_blank" href="https://www.linkedin.com/in/chase-crumley-951387a3/"><img src="./assets/images/linkedin.png"></a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div> -->
-    <div class="footerStyle row">
-     <div class="col-md-8" style="text-align: left">
-      <h4>Graphic Design / Film Production / Audio Post / Web Development</h4>
-    </div>
-    <div class="col-2" id="linkStyle" class="d-inline">
-      <img src="assets/images/githublogo.png" class="img-responsive" alt="">
-      <img src="assets/images/githublogo.png" class="img-responsive" alt="">
-      <div  class="col-4" id="linkStyle" class="d-inline">
+      <div class="footerStyle row">
+       <div class="col-md-8" style="text-align: left">
+        <h4>Graphic Design / Film Production / Audio Post / Web Development</h4>
+      </div>
+      <div class="col-2" id="linkStyle" class="d-inline">
         <img src="assets/images/githublogo.png" class="img-responsive" alt="">
+        <img src="assets/images/githublogo.png" class="img-responsive" alt="">
+        <div  class="col-4" id="linkStyle" class="d-inline">
+          <img src="assets/images/githublogo.png" class="img-responsive" alt="">
+        </div>
       </div>
     </div>
   </div>
-</div>
 </body>
 </html>
