--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
               <div id="mycarousel" class="banner carousel slide col-lg-6" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="item active">
-                    <img src="./Assets/images/logo_design.png" alt="" class="img-responsive">
+                    <img src="./assets/images/logo_design.png" alt="" class="img-responsive">
                     <div class="carousel-caption">
                      <h3>Logo Design</h3>
                    </div>
@@ -45,7 +45,7 @@
              <div id="mycarousel" class="banner carousel slide col-lg-6" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="item active">
-                  <img src="./Assets/images/film.png" alt="" class="img-responsive">
+                  <img src="./assets/images/film.png" alt="" class="img-responsive">
                   <div class="carousel-caption">
                    <h3>Media Design</h3>
                  </div>
@@ -55,7 +55,7 @@
            <div id="mycarousel" class="banner carousel slide col-lg-6" data-ride="carousel">
             <div class="carousel-inner">
               <div class="item active">
-                <img src="./Assets/images/audio.png" alt="" class="img-responsive">
+                <img src="./assets/images/audio.png" alt="" class="img-responsive">
                 <div class="carousel-caption">
                  <h3>Audio Post</h3>
                </div>
@@ -65,7 +65,7 @@
          <div id="mycarousel" class="banner carousel slide col-lg-6" data-ride="carousel">
           <div class="carousel-inner">
             <div class="item active">
-              <img src="./Assets/images/writing.png" alt="" class="img-responsive">
+              <img src="./assets/images/writing.png" alt="" class="img-responsive">
               <div class="carousel-caption">
                <h3>Writing</h3>
              </div>
@@ -78,17 +78,17 @@
  <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
   <div class="container-fluid img-thumbnail rightStyle">
     <div class="row-fluid">
-    <div class=" portStyle col-lg-12" id="port">
+      <div class=" portStyle col-lg-12" id="port">
         <h3>Connect with Me</h3>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 m-x-lg-4">
-        <a target="_blank" href="https://github.com/ccruml20"><img src="./Assets/images/gitlogo.png"></a>
+        <a target="_blank" href="https://github.com/ccruml20"><img src="./assets/images/gitlogo.png"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-        <a target="_blank" href="https://stackoverflow.com/users/7823629/chase-crumley"><img src="./Assets/images/stackoverflow.png"></a>
+        <a target="_blank" href="https://stackoverflow.com/users/7823629/chase-crumley"><img src="./assets/images/stackoverflow.png"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-        <a target="_blank" href="https://www.linkedin.com/in/chase-crumley-951387a3/"><img src="./Assets/images/linkedin.png"></a>
+        <a target="_blank" href="https://www.linkedin.com/in/chase-crumley-951387a3/"><img src="./assets/images/linkedin.png"></a>
       </div>
     </div>
   </div>
