--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
               <div class=" portStyle col-lg-12">
                 <h1>Portfolio</h1>
               </div>
-              <div id="mycarousel" class="banner carousel slide col-lg-6" data-ride="carousel">
+              <div id="mycarousel" class="banner carousel slide col-lg-6 col-md-6" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="item active">
                     <img src="./assets/images/logo_design.png" alt="" class="img-responsive">
@@ -42,7 +42,7 @@
                  </div>
                </div>
              </div>
-             <div id="mycarousel" class="banner carousel slide col-lg-6" data-ride="carousel">
+             <div id="mycarousel" class="banner carousel slide col-lg-6 col-md-6" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="item active">
                   <img src="./assets/images/film.png" alt="" class="img-responsive">
@@ -52,7 +52,7 @@
                </div>
              </div>
            </div>
-           <div id="mycarousel" class="banner carousel slide col-lg-6" data-ride="carousel">
+           <div id="mycarousel" class="banner carousel slide col-lg-6 col-md-6" data-ride="carousel">
             <div class="carousel-inner">
               <div class="item active">
                 <img src="./assets/images/audio.png" alt="" class="img-responsive">
@@ -62,7 +62,7 @@
              </div>
            </div>
          </div>
-         <div id="mycarousel" class="banner carousel slide col-lg-6" data-ride="carousel">
+         <div id="mycarousel" class="banner carousel slide col-lg-6 col-md-6" data-ride="carousel">
           <div class="carousel-inner">
             <div class="item active">
               <img src="./assets/images/writing.png" alt="" class="img-responsive">
