--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-<div class="container-fluid" style="max-width: 1440px;">
+<div class="container-fluid" style="max-width: cover;">
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -24,7 +24,7 @@
       </div>
     </div>
   </nav>
-  <div style="padding-bottom: 20px;">
+  <div class="crop" style="padding-bottom: 20px;">
     <img src="./assets/images/background.png" class="img-responsive" alt="backround image">
   </div> 
   <div id="headerRow">  
