--- a/portfolio.html
+++ b/portfolio.html
@@ -32,17 +32,47 @@
               <div class=" portStyle col-lg-12">
                 <h1>Portfolio</h1>
               </div>
-              <div id="mycarousel" class="banner carousel slide col-lg-6 col-md-6" data-ride="carousel">
-                <div class="carousel-inner">
+              <div class="banner col-lg-6 col-md-6">
+                <div>
                   <div class="item active">
                     <img src="./assets/images/logo_design.png" alt="" class="img-responsive">
-                    <div class="carousel-caption">
+                    <div class="carousel-caption col-lg-12 col-sm-12 col-md-12">
                      <h3>Logo Design</h3>
                    </div>
                  </div>
                </div>
              </div>
-             <div id="mycarousel" class="banner carousel slide col-lg-6 col-md-6" data-ride="carousel">
+                    <div class="banner col-lg-6 col-md-6">
+                <div>
+                  <div class="item active">
+                    <img src="./assets/images/film.png" alt="" class="img-responsive">
+                    <div class="carousel-caption col-lg-12 col-sm-12 col-md-12">
+                     <h3>Media Design</h3>
+                   </div>
+                 </div>
+               </div>
+             </div>
+                    <div class="banner col-lg-6 col-md-6">
+                <div>
+                  <div class="item active">
+                    <img src="./assets/images/audio.png" alt="" class="img-responsive">
+                    <div class="carousel-caption col-lg-12 col-sm-12 col-md-12">
+                     <h3>Audio Post</h3>
+                   </div>
+                 </div>
+               </div>
+             </div>
+                    <div class="banner col-lg-6 col-md-6">
+                <div>
+                  <div class="item active">
+                    <img src="./assets/images/writing.png" alt="" class="img-responsive">
+                    <div class="carousel-caption col-lg-12 col-sm-12 col-md-12">
+                     <h3>Writing</h3>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           <!--   <div id="mycarousel" class="banner carousel slide col-lg-6 col-md-6" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="item active">
                   <img src="./assets/images/film.png" alt="" class="img-responsive">
@@ -51,8 +81,8 @@
                  </div>
                </div>
              </div>
-           </div>
-           <div id="mycarousel" class="banner carousel slide col-lg-6 col-md-6" data-ride="carousel">
+           </div> -->
+     <!--       <div id="mycarousel" class="banner carousel slide col-lg-6 col-md-6" data-ride="carousel">
             <div class="carousel-inner">
               <div class="item active">
                 <img src="./assets/images/audio.png" alt="" class="img-responsive">
@@ -61,8 +91,8 @@
                </div>
              </div>
            </div>
-         </div>
-         <div id="mycarousel" class="banner carousel slide col-lg-6 col-md-6" data-ride="carousel">
+         </div> -->
+         <!-- <div id="mycarousel" class="banner carousel slide col-lg-6 col-md-6" data-ride="carousel">
           <div class="carousel-inner">
             <div class="item active">
               <img src="./assets/images/writing.png" alt="" class="img-responsive">
@@ -71,7 +101,7 @@
              </div>
            </div>
          </div>
-       </div>
+       </div> -->
      </div>
    </div>
  </div>
