--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
               </div>
               <div class="imgStyle2 col-lg-4 col-md-4 col-sm-12 col-xs-12">
 
-                <img src="./assets/images/Chase.jpg" class="img-responsive" alt="">
+              <img src="./assets/images/chase.jpg" class="img-responsive" alt="profile pic">
               </div>
               <div>
                 <p>I desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like). I desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
