--- a/about.html
+++ b/about.html
@@ -38,14 +38,14 @@
               </div>
               <div>
                 <p>I desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like). I desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as </p>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here',  as </p>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-          <div class="container-fluid img-thumbnail rightStyle">
-            <div class="row-fluid">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 rightStyle">
+          <div class="container-fluid img-thumbnail">
+            <div class="row">
               <div class=" portStyle col-lg-12" id="port">
                 <h3>Connect with Me</h3>
               </div>
@@ -62,16 +62,11 @@
           </div>
         </div>
       </div>
-      <div class="footerStyle row">
-       <div class="col-md-8" style="text-align: left">
-        <h4>Graphic Design / Film Production / Audio Post / Web Development</h4>
-      </div>
-      <div class="col-2" id="linkStyle" class="d-inline">
-        <img src="assets/images/githublogo.png" class="img-responsive" alt="">
-        <img src="assets/images/githublogo.png" class="img-responsive" alt="">
-        <div  class="col-4" id="linkStyle" class="d-inline">
-          <img src="assets/images/githublogo.png" class="img-responsive" alt="">
-        </div>
+    </div><!-- Wrap Div end -->
+
+    <div id="footer">
+      <div class="container footerStyle">
+        <p> &copy; Copyright 2017 Chase Crumley</p>
       </div>
     </div>
   </div>
