--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
       <div class="row-fluid">
         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
           <div class="container imgStyle1">
-            <div class="col-md-5">
+            <div class="col-md-6 col-lg-8">
               <div class="form-area">  
                 <form role="form">
                   <br style="clear:both">
@@ -47,9 +47,8 @@
                   </div>
                   <div class="form-group">
                     <textarea class="form-control" type="textarea" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
-                    <span class="help-block"><p id="characterLeft" class="help-block ">You have reached the limit</p></span>                    
+                    <span class="help-block"><p id="characterLeft" class="help-block ">You have reached the limit</p></span>    
                   </div>
-                  
                   <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Submit Form</button>
                 </form>
               </div>
@@ -76,16 +75,12 @@
         </div>
       </div>
     </div>
-    <div class="footerStyle row">
-     <div class="col-md-8 col-lg-8 col-sm-12 col-xs-12" style="text-align: left">
-      <h4>Graphic Design / Film Production / Audio Post / Web Development</h4>
+    <div id="footer">
+      <div class="container footerStyle">
+        <p> &copy; Copyright 2017 Chase Crumley</p>
+      </div>
     </div>
-    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="linkStyle" class="d-inline">
-     <footer>
-      <p> &copy; Copyright 2017 Chase Crumley</p>
-    </footer>
   </div>
-</div>
 </div>
 </body>
 </html>
