--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
    <div class="col-md-8" style="color:#fff  #e8e6e4 text-align: left" >
     <h4>Graphic Design / Film Production / Audio Post / Web Development</h4>
   </div>
-  <div class="col-2" id="linkStyle" class="d-inline">
-    <img src="assets/images/githublogo.png" class="img-responsive" alt="">
-    <img src="assets/images/githublogo.png" class="img-responsive" alt="">
-      <div  class="col-4" id="linkStyle" class="d-inline">
-    <img src="assets/images/githublogo.png" class="img-responsive" alt="">
+    <div id="footer">
+      <div class="container footerStyle">
+        <p> &copy; Copyright 2017 Chase Crumley</p>
+      </div>
+    </div>
   </div>
-</div>
 
 </div>
 </div>
