--- a/work.html
+++ b/work.html
@@ -27,6 +27,9 @@
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+          <div class="container imgStyle1">
+          <div class="col-md-6 col-lg-8">
+        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
           <div class="container-fluid imgStyle img-thumbnail">
             <div class="row-fluid">
               <div class=" portStyle col-lg-12">
@@ -72,35 +75,41 @@
                  </div>
                </div>
              </div>
-     </div>
-   </div>
- </div>
- <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-  <div class="container-fluid img-thumbnail rightStyle">
-    <div class="row-fluid">
-      <div class=" portStyle col-lg-12" id="port">
-        <h3>Connect with Me</h3>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 m-x-lg-4">
-        <a target="_blank" href="https://github.com/ccruml20"><img src="./assets/images/gitlogo.png"></a>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-        <a target="_blank" href="https://stackoverflow.com/users/7823629/chase-crumley"><img src="./assets/images/stackoverflow.png"></a>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-        <a target="_blank" href="https://www.linkedin.com/in/chase-crumley-951387a3/"><img src="./assets/images/linkedin.png"></a>
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+          <div class="container-fluid img-thumbnail rightStyle">
+            <div class="row-fluid">
+              <div class=" portStyle col-lg-12" id="port">
+                <h3>Connect with Me</h3>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 m-x-lg-4">
+                <a target="_blank" href="https://github.com/ccruml20"><img src="./assets/images/gitlogo.png"></a>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                <a target="_blank" href="https://stackoverflow.com/users/7823629/chase-crumley"><img src="./assets/images/stackoverflow.png"></a>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                <a target="_blank" href="https://www.linkedin.com/in/chase-crumley-951387a3/"><img src="./assets/images/linkedin.png"></a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-</div>
-</div>
+      <div class="container">
+
+        <div class="page-header">
+          <h1>Sticky footer</h1>
+        </div>
+        <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS.</p>
+        <p>Use <a href="../sticky-footer-navbar">the sticky footer with a fixed navbar</a> if need be, too.</p>
+      </div>
+    </div><!-- Wrap Div end -->
+
     <div id="footer">
-      <div class="container footerStyle">
-        <p> &copy; Copyright 2017 Chase Crumley</p>
+      <div class="container">
+        <p class="text-muted credit">Example courtesy <a href="http://martinbean.co.uk">Martin Bean</a> and <a href="http://ryanfait.com/sticky-footer/">Ryan Fait</a>.</p>
       </div>
     </div>
-  </div>
 </div>
 </body>
 </html>
