--- a/portfolio.html
+++ b/portfolio.html
@@ -32,69 +32,53 @@
               <div class=" portStyle col-lg-12">
                 <h1>Portfolio</h1>
               </div>
-              <div class="banner col-lg-6 col-md-6">
-                <div>
-                  <div class="item active">
-                    <img src="./assets/images/logo_design.png" alt="" class="img-responsive">
-                    <div class="carousel-caption col-lg-12 col-sm-12 col-md-12">
-                     <h3>Logo Design</h3>
-                   </div>
-                 </div>
-               </div>
-             </div>
-                    <div class="banner col-lg-6 col-md-6">
-                <div>
-                  <div class="item active">
-                    <img src="./assets/images/film.png" alt="" class="img-responsive">
-                    <div class="carousel-caption col-lg-12 col-sm-12 col-md-12">
-                     <h3>Media Design</h3>
-                   </div>
-                 </div>
-               </div>
-             </div>
-                    <div class="banner col-lg-6 col-md-6">
-                <div>
-                  <div class="item active">
-                    <img src="./assets/images/audio.png" alt="" class="img-responsive">
-                    <div class="carousel-caption col-lg-12 col-sm-12 col-md-12">
-                     <h3>Audio Post</h3>
-                   </div>
-                 </div>
-               </div>
-             </div>
-                    <div class="banner col-lg-6 col-md-6">
-                <div>
-                  <div class="item active">
-                    <img src="./assets/images/writing.png" alt="" class="img-responsive">
-                    <div class="carousel-caption col-lg-12 col-sm-12 col-md-12">
-                     <h3>Writing</h3>
-                   </div>
-                 </div>
-               </div>
-             </div>
-     </div>
-   </div>
- </div>
- <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-  <div class="container-fluid img-thumbnail rightStyle">
-    <div class="row-fluid">
-      <div class=" portStyle col-lg-12" id="port">
-        <h3>Connect with Me</h3>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 m-x-lg-4">
-        <a target="_blank" href="https://github.com/ccruml20"><img src="./assets/images/gitlogo.png"></a>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-        <a target="_blank" href="https://stackoverflow.com/users/7823629/chase-crumley"><img src="./assets/images/stackoverflow.png"></a>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-        <a target="_blank" href="https://www.linkedin.com/in/chase-crumley-951387a3/"><img src="./assets/images/linkedin.png"></a>
+              <div class="col-lg-6 col-md-6">
+                <img src="./assets/images/logo_design.png" class="img-responsive">
+                <div class="bannerCreate">
+                  <p>Logo Design</p>
+                </div>
+              </div>
+              <div class="col-lg-6 col-md-6">
+                <img src="./assets/images/film.png" class="img-responsive">
+                <div class="bannerCreate">
+                  <p>Media Design</p>
+                </div>
+              </div>
+              <div class="col-lg-6 col-md-6">
+                <img src="./assets/images/audio.png" class="img-responsive">
+                <div class="bannerCreate">
+                  <p>Audio Post</p>
+                </div>
+              </div>
+              <div class="col-lg-6 col-md-6">
+                <img src="./assets/images/writing.png" class="img-responsive">
+                <div class="bannerCreate">
+                  <p>Writing</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+          <div class="img-thumbnail rightStyle">
+            <div class="row-fluid">
+              <div class=" portStyle col-lg-12" id="port">
+                <h3>Connect with Me</h3>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 m-x-lg-4">
+                <a target="_blank" href="https://github.com/ccruml20"><img src="./assets/images/gitlogo.png"></a>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                <a target="_blank" href="https://stackoverflow.com/users/7823629/chase-crumley"><img src="./assets/images/stackoverflow.png"></a>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                <a target="_blank" href="https://www.linkedin.com/in/chase-crumley-951387a3/"><img src="./assets/images/linkedin.png"></a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-</div>
-</div>
     <div id="footer">
       <div class="container footerStyle">
         <p> &copy; Copyright 2017 Chase Crumley</p>
